# hello_embedded

./: readme.md
app/: Cargo.toml  justfile  memory.x
app/.cargo/: config.toml
app/examples/: hello.rs  panic.rs
app/src/: main.rs
