[package]
authors = ["Christian Lanford"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"
default-run = "app"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
panic-probe = "1.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"
panic-semihosting = "0.6.0"
switch-hal = "0.4.0"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
[dependencies.stm32f4xx-hal]
features = ["stm32f446"]
version = "0.22.1"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
